tests/ui/panic.stderr
error: you probably are missing some parameter in your format string
 --> $DIR/panic.rs:8:16
  |
8 |         panic!("{}");
  |                ^^^^
  |
note: lint level defined here
 --> $DIR/panic.rs:4:9
  |
4 | #![deny(panic_params)]
  |         ^^^^^^^^^^^^

error: you probably are missing some parameter in your format string
  --> $DIR/panic.rs:10:16
   |
10 |         panic!("{:?}");
   |                ^^^^^^

error: you probably are missing some parameter in your format string
  --> $DIR/panic.rs:12:23
   |
12 |         assert!(true, "here be missing values: {}");
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: you probably are missing some parameter in your format string
  --> $DIR/panic.rs:22:5
   |
22 |     assert!("foo bar".contains(&format!("foo {}", "bar")));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate

error: aborting due to 4 previous errors

